examples/test/testpolicy7734.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7734
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key34: value21
      key39: value35
      key38: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value41
          key31: value11
          key24: value20
      podSelector:
        matchLabels:
          key17: value46
          key42: value12
          key9: value49
